@@ -9,6 +9,7 @@ Changelog for 1.3.14
 * Corrected erroneous directory transversal denial (Chris T, bug 3504924)
 * Added recon data to Norwegian chart of accounts (h/t H. Sorli) (Chris T)
 * Fixed some menu items disappearing after upgrade (Chris T, bug 3504934)
+* Added default to country for initial setup (Chris T, bug 3496967)
 
 Andres B is Andres Basile
 
